init customer (backend-frontend)
